[gd_scene load_steps=11 format=2]

[ext_resource path="res://2d/source/scripts/stats_scene/stats_panel_loaded.gd" type="Script" id=1]
[ext_resource path="res://2d/assets/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://2d/assets/images/healthbar_blue.png" type="Texture" id=3]
[ext_resource path="res://bundles/assets/fonts/xolonium/Xolonium.tres" type="DynamicFont" id=4]
[ext_resource path="res://2d/assets/images/healthbar_gray.png" type="Texture" id=5]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_down.png" type="Texture" id=6]
[ext_resource path="res://2d/assets/themes/transparent-static.tres" type="Theme" id=7]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_up.png" type="Texture" id=8]
[ext_resource path="res://audio/sound/click.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.352941, 0, 0, 1 )

[node name="stats" type="Node2D" groups=["stats_loaded"]]
position = Vector2( -1, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 80.0, 34.0 ]
}

[node name="Background" type="Panel" parent="."]
margin_left = 670.0
margin_right = 1019.0
margin_bottom = 268.0
theme = ExtResource( 7 )

[node name="UsernameValueLabel" type="RichTextLabel" parent="Background"]
margin_left = 59.0
margin_top = 4.0
margin_right = 306.0
margin_bottom = 26.0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
scroll_active = false

[node name="HealthBar" type="TextureProgress" parent="Background"]
margin_left = 10.0
margin_top = 35.0
margin_right = 340.0
margin_bottom = 48.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="HealthPercentage" type="Label" parent="Background"]
margin_left = 262.0
margin_top = 30.0
margin_right = 340.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "100%"
align = 1

[node name="MagicBar" type="TextureProgress" parent="Background"]
margin_left = 10.0
margin_top = 57.0
margin_right = 340.0
margin_bottom = 70.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="MagicPercentage" type="Label" parent="Background"]
margin_left = 262.0
margin_top = 52.0
margin_right = 340.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "100%"
align = 1

[node name="HealthAndMagicTextLabel" type="RichTextLabel" parent="Background"]
margin_top = 30.0
margin_right = 125.0
margin_bottom = 76.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]Health[/right]
[right]Magic[/right]"
text = "Health
Magic"

[node name="xpLabel" type="RichTextLabel" parent="Background"]
margin_top = 76.0
margin_right = 125.0
margin_bottom = 98.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]XP[/right]"
text = "XP"
scroll_active = false

[node name="xpValueLabel" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 76.0
margin_right = 348.0
margin_bottom = 98.0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
bbcode_enabled = true
text = "0"
scroll_active = false

[node name="xpNextLabel" type="RichTextLabel" parent="Background"]
margin_top = 99.0
margin_right = 125.0
margin_bottom = 121.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]XP Next[/right]"
text = "XP Next"
scroll_active = false

[node name="xpNextValueLabel" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 99.0
margin_right = 348.0
margin_bottom = 121.0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
bbcode_enabled = true
text = "0"
scroll_active = false

[node name="HealthText" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 30.0
margin_right = 269.0
margin_bottom = 52.0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
bbcode_enabled = true
text = "0/0"
scroll_active = false

[node name="MagicText" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 53.0
margin_right = 269.0
margin_bottom = 75.0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
bbcode_enabled = true
text = "0/0"
scroll_active = false

[node name="StatsTextAllColumn1Label" type="RichTextLabel" parent="Background"]
margin_top = 122.0
margin_right = 125.0
margin_bottom = 257.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="StatsValueAllColumn1Label" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 122.0
margin_right = 253.0
margin_bottom = 257.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="StatsTextAllColumn2Label" type="RichTextLabel" parent="Background"]
margin_left = 171.0
margin_top = 122.0
margin_right = 296.0
margin_bottom = 257.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="StatsValueAllColumn2Label" type="RichTextLabel" parent="Background"]
margin_left = 302.0
margin_top = 122.0
margin_right = 355.0
margin_bottom = 257.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="MiscTextAllColumn1Label" type="RichTextLabel" parent="Background"]
margin_top = 282.0
margin_right = 125.0
margin_bottom = 417.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]Skill Total[/right]
[right]Player Level[/right]"
text = "Skill Total
Player Level"
scroll_active = false

[node name="MiscValueAllColumn1Label" type="RichTextLabel" parent="Background"]
margin_left = 131.0
margin_top = 282.0
margin_right = 327.0
margin_bottom = 417.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
text = "0000/0000
000"
scroll_active = false

[node name="MiscTextAllColumn2Label" type="RichTextLabel" parent="Background"]
margin_left = 171.0
margin_top = 282.0
margin_right = 296.0
margin_bottom = 417.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="MiscValueAllColumn2Label" type="RichTextLabel" parent="Background"]
margin_left = 302.0
margin_top = 282.0
margin_right = 355.0
margin_bottom = 417.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/default_color = Color( 0.27451, 0.666667, 0.27451, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="ArrowUp" type="TextureRect" parent="Background"]
margin_left = 3.0
margin_top = 8.00002
margin_right = 35.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.4 )
focus_mode = 2
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ArrowDown" type="TextureRect" parent="Background"]
margin_left = 21.0
margin_top = 8.00002
margin_right = 53.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.4 )
focus_neighbour_left = NodePath("../ArrowUp")
focus_mode = 2
theme = ExtResource( 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonExit" type="Button" parent="."]
margin_left = 988.0
margin_top = 5.0
margin_right = 1014.0
margin_bottom = 31.0
custom_styles/normal = SubResource( 1 )
text = "X"

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="mouse_entered" from="Background/ArrowUp" to="." method="_on_ArrowUp_mouse_entered"]
[connection signal="mouse_exited" from="Background/ArrowUp" to="." method="_on_ArrowUp_mouse_exited"]
[connection signal="mouse_entered" from="Background/ArrowDown" to="." method="_on_ArrowDown_mouse_entered"]
[connection signal="mouse_exited" from="Background/ArrowDown" to="." method="_on_ArrowDown_mouse_exited"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_ButtonExit_pressed"]
